<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragmentCreateEventLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edEventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/name_hint"
        android:textSize="27sp" />

    <EditText
        android:id="@+id/edEventDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/description_hint"
        android:textSize="20sp" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow>

            <TextView
                android:id="@+id/tvStartTimeInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:hint="@string/start_time_hint"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvStartTimeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_time_value"
                android:textSize="20sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/tvEndTimeInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:hint="@string/end_time_hint"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvEndTimeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_time_value"
                android:textSize="20sp" />
        </TableRow>
    </TableLayout>
</LinearLayout>